[package]
name = "exspherement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.9", features = ["derive"] }
env_logger = "0.9"
glam = "0.20"
once_cell = "1.10"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"